RESOLVED FIXED51574
[chromium] Fix a style nit in the JPEG encoder
https://bugs.webkit.org/show_bug.cgi?id=51574
Summary [chromium] Fix a style nit in the JPEG encoder
noel gordon
Reported 2010-12-23 16:06:21 PST
[chromium] Fix a style nit in the JPEG encoder
Attachments
patch (1.04 KB, patch)
2010-12-23 16:10 PST, noel gordon
no flags
noel gordon
Comment 1 2010-12-23 16:10:27 PST
noel gordon
Comment 2 2010-12-23 16:11:50 PST
Can't fix the nit about <stdio.h> though.
WebKit Commit Bot
Comment 3 2010-12-24 04:06:14 PST
Comment on attachment 77382 [details] patch Clearing flags on attachment: 77382 Committed r74631: <http://trac.webkit.org/changeset/74631>
WebKit Commit Bot
Comment 4 2010-12-24 04:06:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.