2010-12-24  Noel Gordon  <noel.gordon@gmail.com>

Reviewed by Andreas Kling.

        [chromium] Fix a style nit in the JPEG encoder
        https://bugs.webkit.org/show_bug.cgi?id=51574

        * platform/image-encoders/skia/JPEGImageEncoder.cpp: nit begone.

Canonical link: https://commits.webkit.org/64970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74631 268f45cc-cd09-0410-ab3c-d52691b4dbfc